# Max_bot

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  openapi.yaml  package-lock.json  package.json  tsconfig.app.json
max-pass-bot/: .env.example  README.md  docker-compose.yml  pyproject.toml
max-pass-bot/.deps/alembic-1.18.4.dist-info/: RECORD
max-pass-bot/.deps/backoff-2.2.1.dist-info/: RECORD
max-pass-bot/.deps/fastapi-0.136.3.dist-info/: RECORD
max-pass-bot/.deps/mako-1.3.12.dist-info/: RECORD
max-pass-bot/.deps/maxapi-1.1.0.dist-info/: METADATA  RECORD
max-pass-bot/.deps/puremagic-1.30.dist-info/: RECORD
max-pass-bot/.deps/pygments-2.20.0.dist-info/: RECORD
max-pass-bot/.deps/pytest-9.0.3.dist-info/: RECORD
max-pass-bot/.deps/starlette-1.1.0.dist-info/: RECORD
max-pass-bot/.deps/uvicorn-0.48.0.dist-info/: RECORD
max-pass-bot/alembic/: env.py
max-pass-bot/alembic/versions/: 001_initial.py
max-pass-bot/docs/: bot-flow.md  state-machine.md
max-pass-bot/src/pass_bot/: __init__.py  bootstrap.py  main_polling.py  main_webhook.py
max-pass-bot/src/pass_bot/application/: use_cases.py
max-pass-bot/src/pass_bot/domain/: entities.py  enums.py  exceptions.py  repositories.py
max-pass-bot/src/pass_bot/domain/services/: __init__.py  request_state_machine.py  role_policy.py
max-pass-bot/src/pass_bot/domain/value_objects/: __init__.py  guest_name.py  purpose.py  visit_date.py
max-pass-bot/src/pass_bot/infrastructure/: container.py
max-pass-bot/src/pass_bot/infrastructure/max/: async_db.py  (+6 more)
max-pass-bot/tests/: test_domain.py
(+33 files in other folders)
