[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "max-pass-bot"
version = "0.1.0"
description = "Чат-бот MAX — Электронное бюро пропусков"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "maxapi>=1.1.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg2-binary>=2.9.10",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[project.scripts]
pass-bot-poll = "pass_bot.main_polling:main"
pass-bot-webhook = "pass_bot.main_webhook:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
